--- a/sns_project/app/src/main/res/layout/add_news_feed_activity.xml
+++ b/sns_project/app/src/main/res/layout/add_news_feed_activity.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/addNewsFeedLayout"
+    android:id="@+id/add_news_feed_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -11,11 +11,11 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         android:layout_alignParentTop="true"
-        android:id="@+id/add_page_toolbar"
+        android:id="@+id/add_news_feed_toolbar"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
         <TextView
-            android:id="@+id/add_page_title"
+            android:id="@+id/add_news_feed_title_textView"
             android:text="새 게시물"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -26,13 +26,13 @@
 
     <LinearLayout
         android:layout_margin="13dp"
-        android:layout_below="@+id/add_page_toolbar"
+        android:layout_below="@+id/add_news_feed_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <ImageView
             android:layout_margin="5dp"
-            android:id="@+id/addImageView"
+            android:id="@+id/add_news_feed_add_imageView"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@drawable/add_image"/>
@@ -43,7 +43,7 @@
             android:layout_height="match_parent">
 
             <EditText
-                android:id="@+id/feedContentsTextView"
+                android:id="@+id/add_news_feed_feed_contents_editText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
