--- a/sns_project/app/src/main/res/layout/news_feed_activity.xml
+++ b/sns_project/app/src/main/res/layout/news_feed_activity.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/newsfeedLayout"
+    android:id="@+id/news_feed_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,11 +12,11 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         android:layout_alignParentTop="true"
-        android:id="@+id/app_toolbar"
+        android:id="@+id/news_feed_toolbar"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
         <TextView
-            android:id="@+id/toolbar_title"
+            android:id="@+id/news_feed_toolbar_title_textView"
             android:text="MKJWgram"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -27,24 +27,24 @@
 
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:layout_below="@+id/app_toolbar"
-        android:layout_above="@+id/line1"
+        android:layout_below="@+id/news_feed_toolbar"
+        android:layout_above="@+id/news_feed_bottom_line"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/swipe_layout">
+        android:id="@+id/news_feed_swipe_layout">
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_margin="10dp"
 
-            android:id="@+id/feedRecyclerView"
+            android:id="@+id/news_feed_feed_RecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     <View
-        android:id="@+id/line1"
+        android:id="@+id/news_feed_bottom_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_above="@+id/bottomLine"
+        android:layout_above="@+id/news_feed_bottom_layout"
         android:layout_margin="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
@@ -55,37 +55,40 @@
         android:background="@color/cardview_shadow_start_color" />
     <LinearLayout
         android:layout_margin="8dp"
-        android:id="@+id/bottomLine"
+        android:id="@+id/news_feed_bottom_layout"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <ImageView
+            android:id="@+id/news_feed_home_button"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src = "@drawable/home_black"
             android:layout_weight="1"/>
 
         <ImageView
+            android:id="@+id/news_feed_search_button"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/search_small"
             android:layout_weight="1"/>
 
         <ImageView
-            android:id="@+id/feedAddButton"
+            android:id="@+id/news_feed_add_feed_button"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/add"
             android:layout_weight="1"/>
 
         <ImageView
+            android:id="@+id/news_feed_trace_button"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/like"
             android:layout_weight="1"/>
         <ImageView
-            android:id="@+id/userIMG"
+            android:id="@+id/news_feed_user_feed_button"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_weight="1"
