--- a/sns_project/app/src/main/res/layout/news_feed_item.xml
+++ b/sns_project/app/src/main/res/layout/news_feed_item.xml
@@ -12,18 +12,18 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
         <ImageView
-            android:id="@+id/regestUserImg"
+            android:id="@+id/news_feed_item_register_imageView"
             android:layout_margin="2dp"
             android:layout_width="35dp"
             android:layout_height="35dp"/>
 
 
         <TextView
-            android:id="@+id/userNameTextView"
+            android:id="@+id/news_feed_item_user_name_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@+id/regestUserImg"
+            android:layout_toRightOf="@+id/news_feed_item_register_imageView"
             android:text="user1"
             android:textSize="25dp"
             android:textStyle="bold"
@@ -40,7 +40,7 @@
 
     <ImageView
 
-        android:id="@+id/feedImageView"
+        android:id="@+id/news_feed_item_feed_imageView"
         android:layout_margin="6dp"
         android:layout_width="match_parent"
         android:layout_height="250dp"
@@ -80,14 +80,14 @@
     </RelativeLayout>
     <TextView
         android:layout_margin="10dp"
-        android:id="@+id/feedLikeTextView"
+        android:id="@+id/news_feed_item_like_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="좋아요"
         android:textSize="20dp"
         android:textStyle="bold"/>
     <TextView
-        android:id="@+id/feedContentsTextView"
+        android:id="@+id/news_feed_item_contents_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="temp contents"
