--- a/sns_project/app/src/main/res/layout/user_feed_activity.xml
+++ b/sns_project/app/src/main/res/layout/user_feed_activity.xml
@@ -1,6 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-</LinearLayout>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/user_feed_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
+
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:layout_alignParentTop="true"
+        android:id="@+id/user_feed_toolbar"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+        <TextView
+            android:id="@+id/user_feed_toolbar_title_textView"
+            android:text="MKJWgram"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+            android:layout_gravity="center" />
+
+    </androidx.appcompat.widget.Toolbar>
+
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:layout_below="@+id/user_feed_toolbar"
+        android:layout_above="@+id/user_feed_bottom_line"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/user_feed_swipe_layout">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_margin="10dp"
+
+            android:id="@+id/user_feed_recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    <View
+        android:id="@+id/user_feed_bottom_line"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_above="@+id/user_feed_bottom_layout"
+        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/cardview_shadow_start_color" />
+    <LinearLayout
+        android:layout_margin="8dp"
+        android:id="@+id/user_feed_bottom_layout"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/user_feed_home_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src = "@drawable/home_white"
+            android:layout_weight="1"/>
+
+        <ImageView
+            android:id="@+id/user_feed_search_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/search_small"
+            android:layout_weight="1"/>
+
+        <ImageView
+            android:id="@+id/user_feed_add_feed_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/add"
+            android:layout_weight="1"/>
+
+        <ImageView
+            android:id="@+id/user_feed_trace_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/like"
+            android:layout_weight="1"/>
+        <ImageView
+            android:id="@+id/user_feed_user_feed_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_weight="1"
+            />
+    </LinearLayout>
+
+</RelativeLayout>
