유저피드 추가 및 변수이름 변경
유저피드 추가, xml 추가적으로 변수이름 변경
App에서 로그인시 루트 권한을 갖고 있는 userID를 저장하여 다른 엑티비티에서 사용자 아이디에 접근할 수 있도록 수정(인텐트로 넘기지 않고)

--- a/sns_project/app/src/main/res/menu/appbar_news_feed_action.xml
+++ b/sns_project/app/src/main/res/menu/appbar_news_feed_action.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_DM"
+        android:id="@+id/news_feed_DM_button"
         android:icon="@drawable/paper_plane"
         android:title="DM"
         app:showAsAction="always"/>
