--- a/sns_project/app/src/main/res/layout/user_feed_activity.xml
+++ b/sns_project/app/src/main/res/layout/user_feed_activity.xml
@@ -15,13 +15,14 @@
         android:id="@+id/user_feed_toolbar"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
         <TextView
             android:id="@+id/user_feed_toolbar_title_textView"
-            android:text="MKJWgram"
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            android:text="UserID" />
 
     </androidx.appcompat.widget.Toolbar>
 
@@ -33,12 +34,122 @@
         android:layout_height="match_parent"
         android:id="@+id/user_feed_swipe_layout">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_margin="10dp"
-
-            android:id="@+id/user_feed_recyclerView"
+        <RelativeLayout
+            android:id="@+id/user_feed_profile_and_feed_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent">
+
+            <RelativeLayout
+                android:layout_margin="10dp"
+                android:id="@+id/user_feed_profile_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/user_feed_profile_imageView"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/home_white"/>
+                <LinearLayout
+                    android:layout_toRightOf="@+id/user_feed_profile_imageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:id="@+id/user_feed_post_follower_following_count_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        >
+                        <LinearLayout
+                            android:id="@+id/user_feed_post_count_layout"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:layout_weight="1"
+                            android:gravity="center">
+
+                            <TextView
+                                android:id="@+id/user_feed_post_count_textView"
+                                android:textSize="25dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="10"
+                                android:textColor="@android:color/black"
+                                android:textStyle="bold" />
+                            <TextView
+                                android:text="게시물"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content" />
+                        </LinearLayout>
+                        <LinearLayout
+                            android:id="@+id/user_feed_follower_count_layout"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:layout_weight="1"
+                            android:gravity="center">
+
+                            <TextView
+                                android:id="@+id/user_feed_follower_count_textView"
+                                android:textSize="25dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="10"
+                                android:textColor="@android:color/black"
+                                android:textStyle="bold" />
+                            <TextView
+                                android:text="팔로워"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content" />
+                        </LinearLayout>
+                        <LinearLayout
+                            android:id="@+id/user_feed_following_count_layout"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:layout_weight="1"
+                            android:gravity="center">
+
+                            <TextView
+                                android:id="@+id/user_feed_following_count_textView"
+                                android:textSize="25dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="10"
+                                android:textColor="@android:color/black"
+                                android:textStyle="bold" />
+                            <TextView
+                                android:text="팔로잉"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content" />
+                        </LinearLayout>
+                    </LinearLayout>
+                    <Button
+                        android:id="@+id/user_feed_change_profile_button"
+                        android:text="프로필 수정"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                </LinearLayout>
+
+            <TextView
+                android:layout_marginTop="10dp"
+                android:textSize="18dp"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
+                android:id="@+id/user_feed_profile_name_textView"
+                android:layout_below="@+id/user_feed_profile_imageView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="내용"/>
+            </RelativeLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_below="@+id/user_feed_profile_layout"
+                android:id="@+id/user_feed_recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </RelativeLayout>
+
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     <View
         android:id="@+id/user_feed_bottom_line"
