user정보 송수신을 위한 수정
SerializedName가 내부저장(room)에 데이터 바인딩을 시키기 위한 이름이고 json파싱은 클레스 내부 변수 이름으로 하는걸로 잘못 알고 있었다... 삽질을 몇시간을 했는지...

--- a/sns_project/app/src/main/res/layout/user_feed_activity.xml
+++ b/sns_project/app/src/main/res/layout/user_feed_activity.xml
@@ -46,9 +46,8 @@
                 android:layout_height="wrap_content">
                 <ImageView
                     android:id="@+id/user_feed_profile_imageView"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:src="@drawable/home_white"/>
+                    android:layout_width="95dp"
+                    android:layout_height="95dp"/>
                 <LinearLayout
                     android:layout_toRightOf="@+id/user_feed_profile_imageView"
                     android:layout_width="match_parent"
@@ -198,12 +197,15 @@
             android:layout_height="30dp"
             android:src="@drawable/like"
             android:layout_weight="1"/>
-        <ImageView
-            android:id="@+id/user_feed_user_feed_button"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_weight="1"
-            />
+            <ImageView
+                android:id="@+id/user_feed_user_feed_button"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+
+                />
+
+
     </LinearLayout>
 
 </RelativeLayout>
