--- a/sns_project/app/src/main/res/layout/news_feed_item.xml
+++ b/sns_project/app/src/main/res/layout/news_feed_item.xml
@@ -43,8 +43,7 @@
         android:id="@+id/news_feed_item_feed_imageView"
         android:layout_margin="6dp"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:layout_height="250dp" />
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
