팔로워 팔로이 리스트 병합
뷰모델로 팔로우 팔로이 리스트(ID)를 불러오고 그를 이용하여 유저데오에서 유저정보를 각각 불러와서 리스트를 만들고 갱신해주는 방식으로 구성하였다.

--- a/sns_project/app/src/main/res/layout/follow_list_page_activity.xml
+++ b/sns_project/app/src/main/res/layout/follow_list_page_activity.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/user_feed_layout"
+    android:id="@+id/follow_list_page_background_relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -26,10 +26,13 @@
 
 
     </androidx.appcompat.widget.Toolbar>
+
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/follow_list_page_tabLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/follow_list_page_toolbar"
+        app:tabIndicatorColor="@android:color/darker_gray" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:layout_below="@+id/follow_list_page_tabLayout"
@@ -38,7 +41,7 @@
         android:layout_height="match_parent"
         android:id="@+id/follow_list_page_swipe_layout">
 
-        <androidx.viewpager2.widget.ViewPager2
+        <androidx.viewpager.widget.ViewPager
             android:id="@+id/follow_list_page_viewpager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
