--- a/sns_project/app/src/main/res/layout/user_feed_activity.xml
+++ b/sns_project/app/src/main/res/layout/user_feed_activity.xml
@@ -128,6 +128,7 @@
                         android:id="@+id/user_feed_state_button"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:background="@drawable/custom_follow_state_button"
                         android:text="불러오는 중" />
                 </LinearLayout>
 
