--- a/sns_project/app/src/main/res/layout/follow_list_page_listview_item.xml
+++ b/sns_project/app/src/main/res/layout/follow_list_page_listview_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    android:id="@+id/follow_list_page_listview_item_relativeLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
